--- a/.github/workflows/ramips-mt7620_gcc.yml
+++ b/.github/workflows/ramips-mt7620_gcc.yml
@@ -6,7 +6,7 @@ on:
 name: luci-app-jd-dailybonus
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       URL: https://downloads.openwrt.org/releases/19.07.6/targets/ramips/mt7620/openwrt-sdk-19.07.6-ramips-mt7620_gcc-7.5.0_musl.Linux-x86_64.tar.xz
       REPF: ${{ github.repository }}
